--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,30 @@
-# Requirements pour le scraper LinkedIn avec Selenium
+selenium
+webdriver-manager
+pandas
+numpy
+textblob
+streamlit
+plotly
+openpyxl
+python-dotenv
 
-# Selenium et WebDriver
-selenium==4.15.2
-webdriver-manager==4.0.1
+# # Requirements pour le scraper LinkedIn avec Selenium
 
-# Analyse de données
-pandas==2.1.1
-numpy==1.26.0
+# # Selenium et WebDriver
+# selenium==4.15.2
+# webdriver-manager==4.0.1
 
-# Analyse de sentiments
-textblob==0.17.1
+# # Analyse de données
+# pandas>=2.2.2
+# numpy>=2.0.0
 
-# Interface Streamlit (optionnel pour visualisation)
-streamlit==1.28.0
-plotly==5.17.0
-openpyxl==3.1.2
+# # Analyse de sentiments
+# textblob==0.17.1
 
-# Utilitaires
-python-dotenv==1.0.0
+# # Interface Streamlit (optionnel pour visualisation)
+# streamlit>=1.38.0
+# plotly==5.17.0
+# openpyxl==3.1.2
+
+# # Utilitaires
+# python-dotenv==1.0.0
