--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@
 credentials.json
 secrets.json
 config_private.py
+README copy.md
 
 # ----------------------------------------------------------------------------
 # DONNÉES EXTRAITES
